 * Set the parent of subobjects wherever possible to reduce DB retrievals

2009-06-24 tdb
 * Subject inputform component can now be used with singular values

2009-06-26 tdb
 * Revised internal URIs to be /id/[datasetid]/[objectid]
 * Extended Index Queue for initial support for scheduling any job

2009-06-29 tdb
 * Added UUID metafield type

2009-07-01 tdb
 * Fixed cloning of eprints/documents/files

2009-07-24 tdb
 * Added support for a "captcha" field to user registration
 * Allow NewEPrint screen to be used in the key_tools area

2009-07-27 tdb
 * Added "show_help" option to workflow component to disable collapsing

2009-07-29 tdb
 * Added dynamic javascript and CSS based on user logged in status

2009-08-11 tdb
 * Return NOT_FOUND if a request for a secure document doesn't exist

2009-08-12 tdb
 * Use "brief" citation to render title duplicate matches >5

2009-08-17 cjg
 * Added $session->get_conf() to improve readability of code.

2009-08-17 cjg
 * Chopped Session.pm into smaller modules for easier management.
 * Moved some functions to BackCompatability and refactored get_archive

2009-08-17 cjg
 * s/session/handle/g. May the gods have mercy on us.

2009-08-17 cjg
 * Cleanup of some typos

2009-08-21 cjg
 * Fixed a bug introduced in refactoring prepare_page.
 * More document improvements.

2009-08-25 cjg
 * Added API convenience calls for $handle->get_XXXXX( $id )
 * Added convenience methods to $handle: get_dataobj, get_live_eprint,
    get_user_with_username, get_user_with_email.
 * Refactored all code and pod to use these.

2009-08-25 cjg 
 * Reworked API for getting handles and repositories.
 * Refactored code and docs for this new API.

2009-08-25 cjg 
 * $handle->terminate now called by DESTROY if not before.

2009-08-28 cjg 
 * Refactored EPrints::Handle::* into EPrints::RepositoryHandle and 
    EPrints::XMLHandle
 * Changed the EPrints->get_handle method to get_repository_handle( %opts ) 
    and get_repository_handle_by_id( $repo_id, %opts )